sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: illegal start of simple expression
  var c=false
  ^